Update form Customers, suppiers,

--- a/src/main/java/com/batteryworkshop/view/FrmMenuPrincipal.form
+++ b/src/main/java/com/batteryworkshop/view/FrmMenuPrincipal.form
@@ -20,6 +20,13 @@
             </Property>
             <Property name="verticalTextPosition" type="int" value="3"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem13">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Negocio"/>
+              </Properties>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="mnuCategoria">
           <Properties>
@@ -195,6 +202,9 @@
           <SubComponents>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem10">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/img/rol30.png"/>
+                </Property>
                 <Property name="text" type="java.lang.String" value="Gestionar Proveedor"/>
               </Properties>
               <Events>
