--- a/src/main/java/com/batteryworkshop/view/FrmGestionarCategoria.form
+++ b/src/main/java/com/batteryworkshop/view/FrmGestionarCategoria.form
@@ -4,7 +4,7 @@
   <Properties>
     <Property name="closable" type="boolean" value="true"/>
     <Property name="iconifiable" type="boolean" value="true"/>
-    <Property name="title" type="java.lang.String" value="Gestionar Proveedor"/>
+    <Property name="title" type="java.lang.String" value="Gestionar Categoria"/>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
@@ -40,7 +40,7 @@
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" max="32767" attributes="0"/>
+                  <Component id="jLabel1" pref="30" max="32767" attributes="0"/>
                   <Component id="lblTotal" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -67,7 +67,7 @@
                           <Component id="jButton1" min="-2" pref="53" max="-2" attributes="0"/>
                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="txtBuscar" min="-2" pref="227" max="-2" attributes="0"/>
-                          <EmptySpace pref="374" max="32767" attributes="0"/>
+                          <EmptySpace pref="268" max="32767" attributes="0"/>
                           <Component id="cmdAgregar" min="-2" pref="57" max="-2" attributes="0"/>
                       </Group>
                   </Group>
